--- a/partials/article.html
+++ b/partials/article.html
@@ -1,1 +1,84 @@
+    <div class="article1">
+    <figure>
+        <img src="./img/note.jpg" alt="Bank-note-picture">
+        <figcaption>Bank Note US Dollar</figcaption>
+    </figure>
+    
+        <div class="content">
+            <h1>
+                Value of Money: Meaning, Measurement and Preparation of Index Numbers
+            </h1>
 
+            <h3>
+                Article Shared by Tushar Seth
+            </h3>
+
+            <p>
+                The yard measures distance, said the teacher. “But what measures the yard?” was the question. “Well”, came the reply, “distance itself’. <br /> <br /> 
+                Similarly money measures “goods”. But what measures money? <br /> <br /> 
+                “Goods” is the reply. Value, as we know, is the ratio of exchange between two goods, and money measures that value through price. Money is an object of desire. Efforts are made to obtain it not for its own sake but for the goods it can purchase. <br /> <br /> 
+                The value of money, then, is the quantity of goods in general that will be exchanged for one unit of money. The value of money is its purchasing power, i.e., the quantity of goods and services it can purchase. What money can buy depends on the level of prices. When the price level rises, a unit of money can purchase less goods than before. Money is then said to have depreciated. Conversely, a fall in prices signifies that a unit of money can buy more than before. <br /> <br /> 
+                Money is then said to appreciate. The “general level of prices” and the value of money are thus the same thing from two opposite angles. When the prices rise the value of money falls and vice versa. In other words, the value of money and the general price level are inversely proportion­s’ to each other. Violent changes in the value of money (or the price level) disturb economic life and do great harm. We must, therefore, carefully study the factors which’ determine the value of money. <br /> <br /> 
+                Suppose we have found by measurement that a room is four metres long. Measuring it again next day we are surprised to see that the same room is five metres in length. How could the room stretch itself by a metre overnight? Was some partition knocked out or an extension added during the night? Or is it that our metre measure has grown shorter by 2 centimeters? Which out of these is the correct answer? In the same way, if a rupee can buy one kg of wheat today but purchases only half a kg tomorrow, we are greatly perplexed. <br /> <br /> 
+                We feel disgusted with our food-measure, the rupee, which has shrunk to half its length. We want to know what has happened. We are told “the value of money has changed.” Exactly this is what has happened in India. There are many times more rupee notes circulating in the country now than previously, while the number of goods has not increased to that extent. Hence a rupee buys less."
+
+            </p>
+
+        </div>
+    </div>
+
+<div class="article2">
+    <figure>
+        <img src="./img/cabbage.jpg" alt="Bank-note-picture">
+        <figcaption>Cabbage Picture</figcaption>
+      </figure>
+
+    <div class="content">
+    <h1>
+        Value of Money: Meaning, Measurement and Preparation of Index Numbers
+    </h1>
+    
+    <h3>
+        Article Shared by Tushar Seth
+    </h3>
+    
+    <p>
+        The yard measures distance, said the teacher. “But what measures the yard?” was the question. “Well”, came the reply, “distance itself’. <br /> <br /> 
+        Similarly money measures “goods”. But what measures money? <br /> <br /> 
+        “Goods” is the reply. Value, as we know, is the ratio of exchange between two goods, and money measures that value through price. Money is an object of desire. Efforts are made to obtain it not for its own sake but for the goods it can purchase. <br /> <br /> 
+        The value of money, then, is the quantity of goods in general that will be exchanged for one unit of money. The value of money is its purchasing power, i.e., the quantity of goods and services it can purchase. What money can buy depends on the level of prices. When the price level rises, a unit of money can purchase less goods than before. Money is then said to have depreciated. Conversely, a fall in prices signifies that a unit of money can buy more than before. <br /> <br /> 
+        Money is then said to appreciate. The “general level of prices” and the value of money are thus the same thing from two opposite angles. When the prices rise the value of money falls and vice versa. In other words, the value of money and the general price level are inversely proportion­s’ to each other. Violent changes in the value of money (or the price level) disturb economic life and do great harm. We must, therefore, carefully study the factors which’ determine the value of money. <br /> <br /> 
+        Suppose we have found by measurement that a room is four metres long. Measuring it again next day we are surprised to see that the same room is five metres in length. How could the room stretch itself by a metre overnight? Was some partition knocked out or an extension added during the night? Or is it that our metre measure has grown shorter by 2 centimeters? Which out of these is the correct answer? In the same way, if a rupee can buy one kg of wheat today but purchases only half a kg tomorrow, we are greatly perplexed. <br /> <br /> 
+        We feel disgusted with our food-measure, the rupee, which has shrunk to half its length. We want to know what has happened. We are told “the value of money has changed.” Exactly this is what has happened in India. There are many times more rupee notes circulating in the country now than previously, while the number of goods has not increased to that extent. Hence a rupee buys less."
+    
+    </p>
+    </div>
+</div>
+
+    <div class="article3">
+        <figure>
+            <img src="./img/future.jpg" alt="Bank-note-picture">
+            <figcaption>Futuristic Picture</figcaption>
+          </figure>
+         <div class="content">
+        <h1>
+            Value of Money: Meaning, Measurement and Preparation of Index Numbers
+        </h1>
+        
+        <h3>
+            Article Shared by Tushar Seth
+        </h3>
+        
+        <p>
+            The yard measures distance, said the teacher. “But what measures the yard?” was the question. “Well”, came the reply, “distance itself’. <br /> <br /> 
+            Similarly money measures “goods”. But what measures money? <br /> <br /> 
+            “Goods” is the reply. Value, as we know, is the ratio of exchange between two goods, and money measures that value through price. Money is an object of desire. Efforts are made to obtain it not for its own sake but for the goods it can purchase. <br /> <br /> 
+            The value of money, then, is the quantity of goods in general that will be exchanged for one unit of money. The value of money is its purchasing power, i.e., the quantity of goods and services it can purchase. What money can buy depends on the level of prices. When the price level rises, a unit of money can purchase less goods than before. Money is then said to have depreciated. Conversely, a fall in prices signifies that a unit of money can buy more than before. <br /> <br /> 
+            Money is then said to appreciate. The “general level of prices” and the value of money are thus the same thing from two opposite angles. When the prices rise the value of money falls and vice versa. In other words, the value of money and the general price level are inversely proportion­s’ to each other. Violent changes in the value of money (or the price level) disturb economic life and do great harm. We must, therefore, carefully study the factors which’ determine the value of money. <br /> <br /> 
+            Suppose we have found by measurement that a room is four metres long. Measuring it again next day we are surprised to see that the same room is five metres in length. How could the room stretch itself by a metre overnight? Was some partition knocked out or an extension added during the night? Or is it that our metre measure has grown shorter by 2 centimeters? Which out of these is the correct answer? In the same way, if a rupee can buy one kg of wheat today but purchases only half a kg tomorrow, we are greatly perplexed. <br /> <br /> 
+            We feel disgusted with our food-measure, the rupee, which has shrunk to half its length. We want to know what has happened. We are told “the value of money has changed.” Exactly this is what has happened in India. There are many times more rupee notes circulating in the country now than previously, while the number of goods has not increased to that extent. Hence a rupee buys less."
+        
+        </p>
+        
+        </div>
+    </div>
